MonetDB/src/mal/Tests/tst755.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2002, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## Polymorphic function tests
## Catching a pervasive error a.s.a.p.
## The function may not be cloned and a secondary error is generated
#function test(b:bat[any::1,any::2],c:any::2):int;
#	k:= 1+"wrong";
#	print(k);
#end function;
!ERROR: '+' undefined in Admin.test[1]
function Admin.test(b:bat[any::1,any::2],c:any::2):int;	#0:(test:int)<-(b:bat[any::1,any::2])(c:any::2)
	k := +(1,"wrong");	#1 unknown:(k:any)<-($4:int)($5:str)
	print(k);	#2 unknown:($6:any)<-(k:any)
end function;	#3:
#
#c:=new(int,str);
#test(c,"hello");
#
!ERROR: invalid polymorphic function Admin.test
!ERROR: 'Admin.test' undefined in Admin.main[2]
function Admin.main():int;	#0:(main:int)
	c := mal.new(int,str);	#1:(c:bat[int,str])<-(int:int)(str:str)
	Admin.test(c,"hello");	#2 unknown:($4:int)<-(c:bat[int,str])($5:str)
end function;	#3:
!ERROR: SyntaxError:Admin.main[0]:'Admin.main' contains errors
>